# lucas_analise_de_dados

./: main.py  pyproject.toml  teste.py
ap2/: apis.py  homicidios_go_aolongodosanos.csv  homicidios_mun_go_2023.csv  homicidios_mun_go_aolongodosanos.csv  homicidios_uf.csv
aula 2-rtopy/: normtemp.csv  rpy.py  rtopy.py  teste.py
aula 3/: limpeza_dados.py
aula 4/: aula4.py
aula 6/: aula6_balancos.py
aula2-rtopy/: rtopy.py
data/: dados_imoveis.csv  dados_imoveis.xlsx  imoveis_asa_sul.csv  imoveis_asa_sul_2M_2_5M.csv
exercicios/Lista Dataframes/: listaDataframe.docx  lista_dataframes.py
exercicios/Pandas Myntra/: ex_merge.py  exercicios.py
exercicios/Simulado AP1/: ex.py
exercicios/Simulado_Indicadores/: ex_indicadores.py
prova_ap1_lucas_rodor/: prova_ap1_lucas_rodor.py
